fixed cmake paths

--- a/CuctomOperator/ort_custom_op/CMakeLists.txt
+++ b/CuctomOperator/ort_custom_op/CMakeLists.txt
@@ -2,23 +2,25 @@ cmake_minimum_required(VERSION 3.10)
 project (customop)
 add_definitions(-std=c++11)
 
-#Include path to header files
-include_directories(/home/neraoof/onnxruntime/include/onnxruntime)
-include_directories(/home/neraoof/onnxruntime/cmake/external/eigen)
-include_directories(/home/neraoof/onnxruntime/onnxruntime/test/util/include)
-include_directories(/home/neraoof/onnxruntime/onnxruntime)
-
-
 set(SOURCE custom_op_test.cc)
 set(HEADER custom_op.h)
 add_executable(customop ${SOURCE} ${HEADER})
 
+#Include path to header files
+include_directories(<PATH_TO_ONNXRUNTIME_EIGEN_HEADER_FILE>)
 
+#Include path to header files for unit test
+include_directories(<PATH_TO_ONNXRUNTIME_INCLUDE_DIR>)
+include_directories(<PATH_TO_ONNXRUNTIME_TEST_UTIL_INCLUDE_DIR>)
+include_directories(<PATH_TO_ONNXRUNTIME_INCLUDE_DIR>)
+
+
+#Link libraries needed for unit test
 find_library(GTEST_LIBRARY gtest HINTS /usr/lib/x86_64-linux-gnu)
 find_library(PROTOBUF_LIBRARY protobuf HINTS /usr/lib/x86_64-linux-gnu)
 find_library(THREAD_LIBRARY pthread HINTS /usr/lib/x86_64-linux-gnu)
-find_library(ONNXRUNTIME_MOCKED_ALLOCATOR_LIBRARY onnxruntime_mocked_allocator HINTS /home/neraoof/onnxruntime/build/Linux/RelWithDebInfo)
-find_library(ONNXRUNTIME_LIBRARY onnxruntime HINTS /home/neraoof/onnxruntime/build/Linux/RelWithDebInfo)
+find_library(ONNXRUNTIME_MOCKED_ALLOCATOR_LIBRARY onnxruntime_mocked_allocator HINTS <PATH_TO_ONNXRUNTIME_BUILD_DIR>)
+find_library(ONNXRUNTIME_LIBRARY onnxruntime HINTS <PATH_TO_ONNXRUNTIME_BUILD_DIR>)
 
 
 target_link_libraries(customop PUBLIC ${ONNXRUNTIME_MOCKED_ALLOCATOR_LIBRARY})
