--- a/CustomOperator/ort_custom_op/CMakeLists.txt
+++ b/CustomOperator/ort_custom_op/CMakeLists.txt
@@ -8,21 +8,11 @@ set(HEADER custom_op.h)
 set(SOURCE custom_op.h)
 add_executable(customop ${SOURCE} ${HEADER} ${TEST_SOURCE})
 
-
+#Include path to header files for Custom Op
 include_directories(<PATH_TO_EIGEN_DIR>)
 include_directories(<PATH_TO_ONNXRUNTIME_INCLUDE_DIR>)
 
 
+#Linking dependencies for Custom Op
 find_library(ONNXRUNTIME_LIBRARY onnxruntime HINTS <PATH_TO_ONNXRUNTIME_LIB>)
 target_link_libraries(customop PUBLIC ${ONNXRUNTIME_LIBRARY})
-
-#Linking dependencies for Custom Op Test
-#User libraries path could be: /usr/lib/x86_64-linux-gnu
-find_library(GTEST_LIBRARY gtest HINTS <PATH_TO_USER_LIB>)
-target_link_libraries(customop PUBLIC ${GTEST_LIBRARY})
-
-find_library(PROTOBUF_LIBRARY protobuf HINTS <PATH_TO_USER_LIB>)
-target_link_libraries(customop PUBLIC ${PROTOBUF_LIBRARY})
-
-find_library(THREAD_LIBRARY pthread HINTS <PATH_TO_USER_LIB>)
-target_link_libraries(customop PUBLIC ${THREAD_LIBRARY})
